--- a/Java ver/Caesar/STP-Receiver/pom.xml
+++ b/Java ver/Caesar/STP-Receiver/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>STP-Receiver</artifactId>
+    <packaging>jar</packaging>
 
 
 </project>
